testsuite/bsc.driver/gensign/DupPackage.bsv.bsc-out.expected
checking package dependencies
compiling DupPackage.bsv
Error: "DupPackage.bsv", line 4, column 8: (T0122)
  Duplicate export `Vector'
