testsuite/bsc.driver/gensign/DupPackage.bsv
import Vector::*;

export Vector::*;
export Vector::*;

